[Bug] #33. 패키지 경로 및 자잘 한 이슈 해결